// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/VillageData must render correctly with data: VillageData with data 1`] = `
Array [
  <tr>
    <th
      className="default-width"
    >
      Patient ID
    </th>
    <th
      className="default-width"
    >
      Gravidity
    </th>
    <th
      className="default-width"
    >
      Parity
    </th>
    <th
      className="default-width"
    >
      Location
    </th>
    <th
      className="default-width"
    >
      EDD
    </th>
    <th
      className="default-width"
    >
      Previous Pregnancy Risk
    </th>
    <th
      className="default-width"
    >
      Risk category
    </th>
  </tr>,
  <tr
    key="1573740273076"
  >
    <td
      className="default-width"
    >
      <Link
        to="/pregnancy_compartments/patient_detail/100RH2"
      >
        <a
          href="/pregnancy_compartments/patient_detail/100RH2"
          onClick={[Function]}
        >
          100RH2
        </a>
      </Link>
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      Thôn 1
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
       NULL
    </td>
    <td
      className="default-width"
    >
      <riskColoring
        risk=""
      >
        <span
          className="badge badge-info"
          id="default-width"
        />
      </riskColoring>
    </td>
  </tr>,
  <tr
    key="1573740903368"
  >
    <td
      className="default-width"
    >
      <Link
        to="/pregnancy_compartments/patient_detail/100RJ0"
      >
        <a
          href="/pregnancy_compartments/patient_detail/100RJ0"
          onClick={[Function]}
        >
          100RJ0
        </a>
      </Link>
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      Thôn 1
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
       NULL
    </td>
    <td
      className="default-width"
    >
      <riskColoring
        risk="no risk"
      >
        <span
          className="badge badge-success"
          id="default-width"
        >
          <div>
            <p>
              No Risk
            </p>
          </div>
        </span>
      </riskColoring>
    </td>
  </tr>,
  <tr
    key="1573741222743"
  >
    <td
      className="default-width"
    >
      <Link
        to="/pregnancy_compartments/patient_detail/100RKX"
      >
        <a
          href="/pregnancy_compartments/patient_detail/100RKX"
          onClick={[Function]}
        >
          100RKX
        </a>
      </Link>
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      Thôn 1
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
       NULL
    </td>
    <td
      className="default-width"
    >
      <riskColoring
        risk="low"
      >
        <span
          className="badge badge-warning"
          id="default-width"
        >
          <div>
            <p>
              Low Risk
            </p>
          </div>
        </span>
      </riskColoring>
    </td>
  </tr>,
  <tr
    key="1573742257475"
  >
    <td
      className="default-width"
    >
      <Link
        to="/pregnancy_compartments/patient_detail/100RMT"
      >
        <a
          href="/pregnancy_compartments/patient_detail/100RMT"
          onClick={[Function]}
        >
          100RMT
        </a>
      </Link>
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      Đăk Tờ Re
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
       NULL
    </td>
    <td
      className="default-width"
    >
      <riskColoring
        risk="low"
      >
        <span
          className="badge badge-warning"
          id="default-width"
        >
          <div>
            <p>
              Low Risk
            </p>
          </div>
        </span>
      </riskColoring>
    </td>
  </tr>,
  <tr
    key="1573742379532"
  >
    <td
      className="default-width"
    >
      <Link
        to="/pregnancy_compartments/patient_detail/100RNP"
      >
        <a
          href="/pregnancy_compartments/patient_detail/100RNP"
          onClick={[Function]}
        >
          100RNP
        </a>
      </Link>
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
      Đăk Tờ Re
    </td>
    <td
      className="default-width"
    >
      0
    </td>
    <td
      className="default-width"
    >
       NULL
    </td>
    <td
      className="default-width"
    >
      <riskColoring
        risk="Not Set"
      >
        <span
          className="badge badge-info"
          id="default-width"
        >
          <div>
            <p>
              Not Set
            </p>
          </div>
        </span>
      </riskColoring>
    </td>
  </tr>,
]
`;

exports[`components/VillageData must render correctly with no data: Village data with no data 1`] = `
<VillageData
  current_level={0}
  module=""
  smsData={Array []}
/>
`;

exports[`components/VillageData/nbcAndPncChildMapFunction must return the correct value given specific input: nbcAndPncChildMapFunctionOutput 1`] = `
<tr>
  <td
    className="default-width"
  >
    <Link
      to="/pregnancy_compartments/child_patient_detail/100RJ0"
    >
      100RJ0
    </Link>
  </td>
  <td
    className="default-width"
  >
    20
  </td>
  <td
    className="default-width"
  >
    Thôn 1
  </td>
  <td
    className="default-width"
  >
     NULL
  </td>
  <td
    className="default-width"
  >
    Thôn 1
  </td>
  <td
    className="default-width"
  >
    <riskColoring
      risk="no risk"
    />
  </td>
</tr>
`;

exports[`components/VillageData/nbcAndPncMotherMapFunction must return the correct value given specific input: nbcAndPncMotherMapFuctionOutput 1`] = `
<tr>
  <td
    className="default-width"
  >
    <Link
      to="/pregnancy_compartments/patient_detail/100RH2"
    >
      100RH2
    </Link>
  </td>
  <td
    className="default-width"
  >
    20
  </td>
  <td
    className="default-width"
  >
    Thôn 1
  </td>
  <td
    className="default-width"
  >
     NULL
  </td>
  <td
    className="default-width"
  >
    Thôn 1
  </td>
  <td
    className="default-width"
  >
    <riskColoring
      risk=""
    />
  </td>
</tr>
`;

exports[`components/VillageData/pregnancyMapFunction must return the correct value given specific input: pregnancyMapFunctionOutput 1`] = `
<tr>
  <td
    className="default-width"
  >
    <Link
      to="/pregnancy_compartments/patient_detail/100RKX"
    >
      100RKX
    </Link>
  </td>
  <td
    className="default-width"
  >
    0
  </td>
  <td
    className="default-width"
  >
    0
  </td>
  <td
    className="default-width"
  >
    Thôn 1
  </td>
  <td
    className="default-width"
  >
    0
  </td>
  <td
    className="default-width"
  >
     NULL
  </td>
  <td
    className="default-width"
  >
    <riskColoring
      risk="low"
    />
  </td>
</tr>
`;
